--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,16 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+#Ignore build stuff
+build/
+Debug/
+dist/
+Release/
 
-# Precompiled Headers
-*.gch
-*.pch
+#Ignore ogre log
+/Ogre.log
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+#Netbeans
+nbproject/
 
-# Fortran module files
-*.mod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+#make stuff
+/Makefile
+/nEnts
+/ogre.cfg
